[package]
name = "tests"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
publish = false

[dependencies]
bytes = "0.4.7"
futures = "0.1.21"
h2 = "0.1.4"
http = "0.1.5"
tokio = "0.1.5"
tower-h2 = { path = ".." }

[dependencies.h2-support]
git = "https://github.com/carllerche/h2"
rev = "41aae14"

[dependencies.tower-service]
git = "https://github.com/tower-rs/tower"
rev = "20fb04e"

[dependencies.tower-util]
git = "https://github.com/tower-rs/tower"
rev = "20fb04e"
